<resources>
    <string name="app_name">RentalDemo</string>
    <string name="app_name_rent_easy">RentEasy</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_an_account">Create an Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="back_to_login">Back to Login</string>
    <string name="verify_email">Verify Email</string>
    <string name="verify_email_success_msg">Email verified successfully!</string>
    <string name="enter_code">Enter Code</string>
    <string name="get_code">Get Code</string>
    <string name="verify">Verify</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm">Confirm</string>
    <string name="create_new_password">Create New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="nav_home">Home</string>
    <string name="nav_favourites">Favourites</string>
    <string name="nav_add">Add</string>
    <string name="nav_history">History</string>
    <string name="nav_profile">Profile</string>
    <string name="search_address_city_location">Search address, city, location</string>
    <string name="categories">Categories</string>
    <string name="see_more">See More</string>
    <string name="recently_updated">Recently Updated</string>
    <string name="your_new_post">Your new Post</string>
    <string name="rent">Rent</string>
    <string name="easy">Easy</string>
    <string name="home_facilities">Home Facilities</string>
    <string name="near_public_facilities">Near Public Facilities</string>
    <string name="description">Description</string>
    <string name="description_message">This is a beautiful and cozy home which would be perfect for those who are searching for small yet environment friendly place.\n\nThis home is  equipped with Washing Machine, Electric Stove, Microwave, Refrigerator, Cutlery.</string>
    <string name="proceed_for_booking">Proceed for Booking</string>
    <string name="title">Title</string>
    <string name="type">Type</string>
    <string name="price">Price</string>
    <string name="negotiable">Negotiable</string>
    <string name="non_negotiable">Non-negotiable</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="upload_property_images">Upload Property Images</string>
    <string name="remember_login">Remember Login</string>
    <string name="please_wait">Please wait</string>
    <string name="search">Search</string>
    <string name="appwidget_text">RentEasy</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="channel_name">My Notification Channel</string>
    <string name="channel_description">My Notification Description</string>
    <string name="notification_title">Congrats!</string>
    <string name="notification_message">Your item has posted successfully!</string>
    <string name="alert_title">Alert!</string>
    <string name="alert_message">Do you want to proceed to manage notification permission?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="package_name">package</string>
    <string name="google_map_api_key">AIzaSyA4x6TTFkhv6nKCtnWtUjC2kffOH4spB_k</string>
</resources>