<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/action_favourite"
            android:icon="@drawable/ic_heart"
            android:title="@string/nav_favourites" />

        <item
            android:id="@+id/action_add"
            android:icon="@drawable/ic_add"
            android:title="@string/nav_add" />
<!--        <item-->
<!--            android:id="@+id/action_history"-->
<!--            android:icon="@drawable/ic_history"-->
<!--            android:title="@string/nav_history" />-->

        <item
            android:id="@+id/action_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/nav_profile" />
    </group>

</menu>