<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="@dimen/spacing_56"
                android:src="@drawable/logo"
                app:layout_constraintDimensionRatio="w,1:2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textColor="@color/colorMain"
                android:textSize="@dimen/text_size_36"
                android:textStyle="bold"
                app:fontFamily="@font/sansf_bold"
                app:layout_constraintBottom_toBottomOf="@+id/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_32"
                android:fontFamily="@font/sansf_bold"
                android:paddingStart="@dimen/spacing_24"
                android:paddingEnd="@dimen/spacing_24"
                android:text="@string/email"
                android:textAllCaps="true"
                android:textColor="@color/black_444444"
                android:textSize="@dimen/text_size_12"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_8"
                android:paddingStart="@dimen/spacing_24"
                android:paddingEnd="@dimen/spacing_24"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/edit_text_style_blue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="@dimen/spacing_8"
                    android:text="codesomps@gmail.com"
                    android:hint="example@gmail.com"
                    android:text="codesomps@gmail.com"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@+id/btn_sign_in" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_16"
                android:fontFamily="@font/sansf_bold"
                android:paddingStart="@dimen/spacing_24"
                android:paddingEnd="@dimen/spacing_24"
                android:text="@string/password"
                android:textAllCaps="true"
                android:textColor="@color/black_444444"
                android:textSize="@dimen/text_size_12"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_8"
                android:paddingStart="@dimen/spacing_24"
                android:paddingEnd="@dimen/spacing_24"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_password"
                app:passwordToggleDrawable="@drawable/password_selector"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:text="admin666"
                    style="@style/edit_text_style_blue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="@dimen/spacing_8"
                    android:text="admin666"
                    android:hint="xxxxxxxxxx"
                    android:inputType="textPassword"
                    android:nextFocusDown="@+id/btn_sign_in" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cb_remember"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_16"
                android:fontFamily="@font/sansf_regular"
                android:text="@string/remember_login"
                android:textSize="@dimen/text_size_14"
                app:layout_constraintBottom_toBottomOf="@+id/tv_forgot_password"
                app:layout_constraintEnd_toStartOf="@+id/tv_forgot_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_forgot_password" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_16"
                android:layout_marginEnd="@dimen/text_size_24"
                android:fontFamily="@font/sansf_bold"
                android:padding="@dimen/spacing_4"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/colorMain"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                style="@style/button_style_main"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_24"
                android:layout_marginTop="@dimen/spacing_16"
                android:layout_marginEnd="@dimen/spacing_24"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_dont_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_32"
                android:layout_marginEnd="@dimen/text_size_24"
                android:fontFamily="@font/sansf_bold"
                android:text="@string/don_t_have_an_account"
                android:textAllCaps="false"
                android:textColor="@color/black_444444"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/btn_login"
                app:layout_constraintStart_toStartOf="@+id/btn_login"
                app:layout_constraintTop_toBottomOf="@+id/btn_login" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_create_account"
                style="@style/button_style_accent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_24"
                android:layout_marginTop="@dimen/spacing_4"
                android:layout_marginEnd="@dimen/spacing_24"
                android:text="@string/create_an_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_dont_have_account" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>