<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="@dimen/spacing_56"
                android:src="@drawable/logo"
                app:layout_constraintDimensionRatio="w,1:2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_email"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_36"
                android:textStyle="bold"
                app:fontFamily="@font/sansf_bold"
                app:layout_constraintBottom_toBottomOf="@+id/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_24"
                android:layout_marginTop="@dimen/spacing_32"
                android:layout_marginEnd="@dimen/spacing_24"
                android:fontFamily="@font/sansf_bold"
                android:text="@string/email"
                android:textAllCaps="true"
                android:textColor="@color/black_444444"
                android:textSize="@dimen/text_size_12"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_24"
                android:layout_marginTop="@dimen/spacing_8"
                android:layout_marginEnd="@dimen/spacing_24"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/edit_text_style_blue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="@dimen/spacing_8"
                    android:hint="example@gmail.com"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@+id/btn_sign_in" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_enter_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_24"
                android:layout_marginTop="@dimen/spacing_16"
                android:layout_marginEnd="@dimen/spacing_24"
                android:fontFamily="@font/sansf_bold"
                android:text="@string/enter_code"
                android:textAllCaps="true"
                android:textColor="@color/black_444444"
                android:textSize="@dimen/text_size_12"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_enter_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_24"
                android:layout_marginTop="@dimen/spacing_8"
                app:hintEnabled="false"
                app:layout_constraintEnd_toStartOf="@+id/btn_get_code"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_enter_code"
                app:passwordToggleDrawable="@drawable/password_selector"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_enter_code"
                    style="@style/edit_text_style_blue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="@dimen/spacing_8"
                    android:hint="******"
                    android:inputType="number"
                    android:nextFocusDown="@+id/btn_sign_in" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_get_code"
                style="@style/button_style_main"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/spacing_16"
                android:layout_marginEnd="@dimen/spacing_24"
                android:gravity="center"
                android:text="@string/get_code"
                app:layout_constraintBottom_toBottomOf="@id/til_enter_code"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/til_enter_code"
                app:layout_constraintTop_toTopOf="@id/til_enter_code" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_verify"
                style="@style/button_style_accent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_24"
                android:layout_marginTop="@dimen/spacing_24"
                android:layout_marginEnd="@dimen/spacing_24"
                android:text="@string/verify"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_enter_code" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_back_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_16"
                android:layout_marginEnd="@dimen/text_size_24"
                android:layout_marginBottom="@dimen/spacing_24"
                android:fontFamily="@font/sansf_bold"
                android:padding="@dimen/spacing_8"
                android:text="@string/back_to_login"
                android:textAllCaps="false"
                android:textColor="@color/colorMain"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btn_verify"
                app:layout_constraintStart_toStartOf="@+id/btn_verify"
                app:layout_constraintTop_toBottomOf="@+id/btn_verify"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>
