<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/logo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="@dimen/spacing_56"
                android:src="@drawable/logo"
                app:layout_constraintDimensionRatio="w,1:2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:textColor="@color/colorMain"
                android:textSize="@dimen/text_size_36"
                android:textStyle="bold"
                app:fontFamily="@font/sansf_bold"
                app:layout_constraintBottom_toBottomOf="@+id/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_create_new_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_24"
                android:layout_marginTop="@dimen/spacing_32"
                android:layout_marginEnd="@dimen/spacing_24"
                android:fontFamily="@font/sansf_bold"
                android:text="@string/create_new_password"
                android:textAllCaps="true"
                android:textColor="@color/black_444444"
                android:textSize="@dimen/text_size_12"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_create_new_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_24"
                android:layout_marginTop="@dimen/spacing_8"
                android:layout_marginEnd="@dimen/spacing_24"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_create_new_password"
                app:passwordToggleDrawable="@drawable/password_selector"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_create_new_password"
                    style="@style/edit_text_style_blue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="@dimen/spacing_8"
                    android:hint="xxxxxxxxxx"
                    android:inputType="textPassword"
                    android:nextFocusDown="@+id/btn_sign_in" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_confirm_new_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_24"
                android:layout_marginTop="@dimen/spacing_16"
                android:layout_marginEnd="@dimen/spacing_24"
                android:fontFamily="@font/sansf_bold"
                android:text="@string/confirm_new_password"
                android:textAllCaps="true"
                android:textColor="@color/black_444444"
                android:textSize="@dimen/text_size_12"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_create_new_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_confirm_new_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_24"
                android:layout_marginTop="@dimen/spacing_8"
                android:layout_marginEnd="@dimen/spacing_24"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_confirm_new_password"
                app:passwordToggleDrawable="@drawable/password_selector"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_confirm_new_password"
                    style="@style/edit_text_style_blue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="@dimen/spacing_8"
                    android:hint="xxxxxxxxxx"
                    android:inputType="textPassword"
                    android:nextFocusDown="@+id/btn_sign_in" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_confirm"
                style="@style/button_style_accent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_24"
                android:layout_marginTop="@dimen/spacing_24"
                android:layout_marginEnd="@dimen/spacing_24"
                android:text="@string/confirm"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_confirm_new_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>